[workspace]
# In my experience, the latest (2024-10-12) resolver version behaves better w.r.t.
# features and other things like that.
# We don't *require* it for now, but we might in the feature.
resolver = "2"
# We need to explicitly include every crate in our workspace.
# If you add a crate, add it here as well.
members = [
  # The command line interface.
  "crates/cli",
  # Core library.
  "crates/spine",
  # The web interface.
  "crates/web"
]

# Shared configuration between packages / crates.
[workspace.package]
authors = ["Lucas Meier <lucas@cronokirby.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/cronokirby/numi"
version = "0.1.0"

[workspace.dependencies]
# Local path dependencies
numi-spine = { path = "crates/spine" }
